# exercises-in-programming-style-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: integration.rs
